2002-09-13  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_color): Handle rgb(r,g,b) and rgb(r%,g%,b%) color specifications
	(rsvg_css_normalize_rgb): new function used in parse_color
	(rsvg_css_normalize_rgb_percent): ditto

	* test-rgb.svg: Testcase for the above
	
2002-09-13  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_length): Remove setlocale calls - this should be done at a level higher than this
	
2002-09-12  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_length): Handle errors, handle more units, reduce number of string compares
	(rsvg_css_parse_normalized_length): New function, like rsvg_parse_length, except normalizes output to a width or height argument
	(rsvg_css_parse_color): fix 2 memory leaks in color parsing routine

	* rsvg.c (rsvg_start_svg): Use rsvg_css_parse_length
	(rsvg_parse_style_arg): ditto
	(rsvg_start_linear_gradient): ditto
	(rsvg_start_radial_gradient): ditto
	
=== librsvg 2.0.1 ===
	
2002-07-22  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.0.1

2002-07-09  Alexander Larsson  <alexl@redhat.com>

	* librsvg.spec.in:
	s/@ART_REQUIRED@/@LIBART_REQUIRED@/
	Patch from Pierre Sarrazin <sarrazip@sympatico.ca>

2002-07-01  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require libart 2.3.10 for bugfix

	* rsvg.c (rsvg_render_bpath):
	Back out michaels workaround, now that the real bug has been fixed.
	The gorilla trashcan still works.

=== librsvg 2.0.0 ===

2002-06-19  Alexander Larsson  <alla@lysator.liu.se>

	* NEWS:
	Add news
	
	* configure.in:
	Bump version to 2.0.0
	Update requirements 

2002-06-08  Michael Meeks  <michael@ximian.com>

	* rsvg.c (rsvg_render_bpath): perturb the 
	close vpath so we don't get numerical stability
	problems.

2002-05-01  Anders Carlsson  <andersca@gnu.org>

	* rsvg.c: (rsvg_handle_close):
	Check for a NULL context in case we haven't called
	rsvg_handle_write to create it. Fixes #80374, reported by